task #1 implemet createLine() func

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
   <div class="wrapper">
-    <canvas id="canvas"></canvas>
+  </div>
+  <div class="scrolled">
+    <button id="new-line_btn">
+      Add new line
+    </button>
   </div>
 </body>
 </html>
