task #2 refactor function into class

--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="wrapper">
+  <div id="canva">
   </div>
-  <div class="scrolled">
-    <button id="new-line_btn">
+  <div id="scrolled">
+    <button id="add-line" class="primary">
       Add new line
     </button>
   </div>
