task #3 change to use canva instead of add spans

--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>String Art</title>
-  <script defer src="script.js"></script>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div id="canva">
-  </div>
-  <div id="scrolled">
-    <button id="add-line" class="primary">
-      Add new line
-    </button>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>String Art</title>
+    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="bg-image"></div>
+    <div id="canvas-container">
+    </div>
+    <div id="scrolled">
+      <button id="add-line" class="primary">Add new line</button>
+    </div>
+  </body>
 </html>
